# axum-simple-blog

./: Cargo.toml  Dockerfile  README.md
.sqlx/: query-130d0eeb92344da7fadbdd1ad7db7a689c65a2581d1bd09fbafbd8cfb2f17c66.json  query-4360bbab6bc627d428663c5e7ed2c1d16ab6be8099ecf78e7399ca5f0577bcb5.json
migrations/: 20241016083817_initial_setup.sql
src/: form.rs  home.rs  main.rs
templates/: home.jinja
