[package]
name = "rust-blog-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
minijinja = "2.3.1"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["sqlite"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
