[package]
name = "rust-blog-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
chrono = { version = "0.4.38", features = ["now"] }
minijinja = "2.3.1"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["chrono", "sqlite", "uuid"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["fs", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4"] }
