[package]
name = "simple-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }
chrono = { version = "0.4.38", features = ["now", "serde"] }
minijinja = "2.3.1"
minijinja-contrib = { version = "2.3.1", features = ["datetime"] }
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["chrono", "runtime-tokio", "sqlite", "uuid"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["fs", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.1", features = ["fs"] }
uuid = { version = "1.10.0", features = ["v4"] }
